--- a/udemyCourse/modeloWebpack/public/index.html
+++ b/udemyCourse/modeloWebpack/public/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aula 01</title>
+  <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    
-  </div>
-  <script src="./js/app.js"></script>
+  <script src="./assets/js/bundle.js"></script>
 </body>
 </html>
